[package]
name = "dynamic_re_reference_cache"
authors = ["Jack Kilrain (EngineersBox)"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
regex = "1.4.3"
cty = "0.2.2"
bumpalo = { version = "3.9", features = ["allocator_api"] }
ouroboros = "0.15.5"
owning_ref = "0.4.1"